# triangulo_transformacoes_geometricas

./: CMakeLists.txt  Escala.cpp  README.md  Reflexao.cpp  Rotacao.cpp  main.cpp
